--- a/upnote/src/api/Lexical/lexical_styles.css
+++ b/upnote/src/api/Lexical/lexical_styles.css
@@ -75,9 +75,10 @@ h1 {
 }
 
 .editor-container {
-  margin: 20px auto 20px auto;
+  margin-top: 2rem;
+  margin-left: 1.5rem;
   border-radius: 2px;
-  max-width: 600px;
+  max-width: 50vw;
   color: #000;
   position: relative;
   line-height: 20px;
@@ -95,7 +96,7 @@ h1 {
 }
 
 .editor-input {
-  min-height: 150px;
+  min-height: 70vh;
   resize: none;
   font-size: 15px;
   caret-color: rgb(5, 5, 5);
