--- a/upnote/src/api/Lexical/lexical_styles.css
+++ b/upnote/src/api/Lexical/lexical_styles.css
@@ -75,8 +75,8 @@ h1 {
 }
 
 .editor-container {
-  margin-top: 2rem;
-  margin-left: 1.5rem;
+  margin-top: 5%;
+  margin-left: 5%;
   border-radius: 2px;
   max-width: 50vw;
   color: #000;
